Fix footer on IOS

--- a/css/media.css
+++ b/css/media.css
@@ -491,4 +491,7 @@
 	.footer .logo {
 		margin-bottom: 30px;
 	}
+	.footer p {
+		padding-bottom: 15px;
+	}
 }
